--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="nav-center">
           <!-- nav header -->
           <div class="nav-header">
-            <p>Hans Moura</p>
+            <h3>Hans Moura</h3>
             <button type="button" class="nav-toggle" id="nav-toggle">
               <i class="fas fa-bars"></i>
             </button>
@@ -61,7 +61,7 @@
             <!-- end of single link -->
             <!-- single link -->
             <li>
-              <a href="#about" class="nav-link scroll-link">about me</a>
+              <a href="#aboutme" class="nav-link scroll-link">about me</a>
             </li>
             <!-- end of single link -->
             <!-- single link -->
@@ -106,7 +106,7 @@
     <!------ABOUT----->
     <section id="about">
       <div class="container">
-        <h1 class="text-center">ABOUT ME</h1>
+        <h1 class="text-center" id="aboutme">ABOUT ME</h1>
         <!---->
           <div class="about-content col-md-12 text-center">
             <p>
@@ -137,7 +137,7 @@
     </section>
     <!------End of ABOUT----->
     <!-----PROJECT----->
-    <section id="project">
+    <section id="projects">
       <div class="container">
         <h1>Some Things I've Built</h1>
         <div class="projects-cards">
