--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="container">
         <h1 class="text-center" id="aboutme">ABOUT ME</h1>
         <!---->
-          <div class="about-content col-md-12 text-center">
+          <div class="about-content text-center">
             <p>
               Hello! I'm Hans, a <span>frontend developer</span> based in Perth, Western Australia.
             </p>
@@ -104,14 +104,18 @@
           <div class="about-skills">
             <h3>Some of my skills:</h3>
             <div class="about-skills-img">
-              <img src="./images/html5.png" alt="html">
-              <img src="./images/css3.png" alt="css">
-              <img src="./images/javascript.png" alt="javascript">
-              <img src="./images/react.png" alt="reactjs">
-              <img src="./images/bootstrap.png" alt="bootstrap">
-              <img src="./images/git.png" alt="git">
-              <img src="./images/npm.png" alt="npm">
-              <img src="./images/photoshop.png" alt="photoshop">
+              <span>
+                <img src="./images/html5.png" alt="html">
+                <img src="./images/css3.png" alt="css">
+                <img src="./images/javascript.png" alt="javascript">
+                <img src="./images/react.png" alt="reactjs">
+              </span>
+              <span>
+                <img src="./images/bootstrap.png" alt="bootstrap">
+                <img src="./images/git.png" alt="git">
+                <img src="./images/npm.png" alt="npm">
+                <img src="./images/photoshop.png" alt="photoshop">
+              </span>
             </div>
           </div>
       </div>
